--- a/templates/index.html
+++ b/templates/index.html
@@ -51,5 +51,6 @@
         </div>
         {% endfor %}
     </main>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
