chore: Mejorar textos de la UI y limpiar comentarios

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <form id="identification-form">
             <div class="form-group">
                 <label for="color">Color:</label>
-                <input type="text" id="color" name="color" placeholder="Ej: Amarillo, Incoloro..." data-coloris>
+                <input type="text" id="color" name="color" placeholder="Color general" data-coloris>
             </div>
 
             <div class="form-group">
@@ -38,7 +38,7 @@
             </div>
             <div class="form-group">
                 <label for="raya">Color de la Raya:</label>
-                <input type="text" id="raya" name="raya" placeholder="Selecciona el color de la raya..." data-coloris>
+                <input type="text" id="raya" name="raya" placeholder="Color de la raya..." data-coloris>
             </div>
 
             <button type="submit">Identificar</button>
