--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
             <button type="submit">Identificar</button>
         </form>
     </div>
+    <div id="resultados-container"></div>
     <main class="catalogo-container">
         <!-- Usamos un bucle for para recorrer la lista de minerales -->
         {% for mineral in minerales %}
