feat: Terminacion base de datos de minerales

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
                         <option value="">-- Selecciona un brillo --</option>
                         <option value="metalico">Metálico</option>
                         <option value="vitreo">Vítreo (como el vidrio)</option>
+                        <option value="mate">Subvitreo</option>
                         <option value="resinoso">Resinoso</option>
                         <option value="sedoso">Sedoso</option>
                         <option value="mate">Mate / Terroso</option>
